# kicad_files

./: .gitignore  .gitmodules  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js  src-files.js
doc/implementors/millimeter/: trait.Unit.js
doc/kicad_files/: all.html  index.html  sidebar-items.js  struct.deg.html  struct.mm.html  trait.Deg.html  trait.Unit.html  type.Color.html
doc/kicad_files/board/: enum.ConnectPads.html  index.html  sidebar-items.js  struct.Layer.html  struct.Timestamp.html
doc/kicad_files/common/: enum.JustifyHoriz.html  enum.JustifyVert.html  enum.PaperSize.html  index.html  sidebar-items.js  struct.Effects.html  struct.Font.html  struct.FontSize.html  struct.Justify.html  struct.Paper.html  struct.Point.html  struct.PointList.html  struct.Position.html  struct.Size.html  struct.TitleBlock.html
doc/kicad_files/degree/: trait.Deg.html
doc/kicad_files/schematic/: enum.SchematicContent.html  index.html  sidebar-items.js  struct.Bus.html  struct.BusEntry.html  struct.Junction.html  struct.Label.html  struct.LibSymbols.html  struct.NoConnect.html  struct.Polyline.html  struct.Schematic.html  struct.Text.html  struct.Version.html  struct.Wire.html
doc/kicad_files/symbol/: enum.FillType.html  enum.PinElectricalType.html  enum.PinGraphicalStyle.html  enum.StrokeType.html  enum.SymbolContent.html  index.html  sidebar-items.js  struct.Arc.html  struct.Circle.html  struct.Curve.html  struct.Fill.html  struct.InnerSymbol.html  struct.Pin.html  struct.PinAlternate.html  struct.PinName.html  struct.PinNames.html  struct.PinNumber.html  struct.PolyLine.html  struct.Property.html  struct.PropertyPosition.html  struct.Rectangle.html  struct.Stroke.html  struct.Symbol.html  struct.Text.html
doc/kicad_files/symbol_lib/: index.html  sidebar-items.js  struct.SymbolLib.html  struct.Version.html
doc/search.desc/kicad_files/: kicad_files-desc-0-.js
doc/src/kicad_files/: degree.rs.html  lib.rs.html  symbol_lib.rs.html
doc/trait.impl/millimeter/: trait.Unit.js
src/: degree.rs  lib.rs  macros.rs  symbol_lib.rs  unit.rs
src/board/: connect_pads.rs  footprint.rs  footprint_attributes.rs  layer.rs  mod.rs  timestamp.rs
src/board/footprint/: arc.rs  attributes.rs  circle.rs  curve.rs  fill_type.rs  line.rs  mod.rs  model.rs  pad.rs  poly.rs  primitives.rs  (+2 more)
src/common/: effects.rs  font.rs  justify.rs  mod.rs  paper.rs  point.rs  point_list.rs  position.rs  size.rs  title_block.rs
src/internal/: mod.rs  option_tuple.rs  option_unit.rs  option_yes_no.rs  rename.rs  tuple.rs  tuple_or_default.rs  u32_hex.rs  unit_variant.rs  yes_no.rs
src/schematic/: bus.rs  bus_entry.rs  junction.rs  label.rs  lib_symbols.rs  mod.rs  no_connect.rs  polyline.rs  text.rs  wire.rs
src/symbol/: arc.rs  circle.rs  curve.rs  fill.rs  mod.rs  pin.rs  pin_names.rs  pin_numbers.rs  polyline.rs  property.rs  rectangle.rs  stroke.rs  text.rs
tests/: kicad_footprints.rs  kicad_symbols.rs
tests/util/: mod.rs
(+257 files in other folders)
