# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "kicad_files"
version = "0.0.0"
publish = false
edition = "2021"

license = "Apache-2.0 OR LGPL-3.0"
description = "KiCAD v6 File Formats"
categories = ["encoding"]
keywords = ["s-expression", "s-expr", "kicad", "serde", "serialization"]

repository = "https://github.com/kicad-rs/kicad_files"

[features]
skip_nil_uuids = []

[dependencies]
millimeter = { version = "0.1.0", features = ["serde"] }
once_cell = "1.9"
paste = "1.0"
rgb = { version = "0.8.31", default-features = false }
serde = { version = "1.0.132", features = ["derive"] }
serde_sexpr = { package = "serde_kicad_sexpr", version = "0.1" }
thiserror = "2.0"
uuid = { version = "1.2.2", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.0"
serde_sexpr = { package = "serde_kicad_sexpr", version = "0.1", features = ["backtrace"] }
termcolor = "1.1"

[profile.test]
opt-level = 3
